--- a/result.tex
+++ b/result.tex
@@ -1,5 +1,7 @@
 
 %% TODO remaining topics to be added or checked: 
+% 
+
 %%	* PhCs with metallic/metamaterial inclusios, [Monsoriu, Lina Shi and friends]
 	%thin wires [8], [28], Swiss rolls [9], SRRs [9], electric SRRs (eSRRs) [29], [30], pairs of rods [10], [12], [31], pair of crosses [32], fishnets [17], [33]”
 
@@ -239,14 +241,9 @@ While the change of the cut-wire radius $\rho_w$ relatively weakly reflects in t
 
 %====================================================================================================
 \section{Electric resonators} \label{section_esrr} % references to -> % note about plasmonic particles 
-From Figs. \ref{fg_CutWires_wirecut2um_wireradiusscan} and \ref{fg_CutWires_wireradius1u_cutwidth_comparison} it follows that for practically attainable geometry, the frequency of the first individual resonance in cut-wire arrays is always relatively close to the first Bragg band gap. 
+From Figs. \ref{fg_CutWires_wirecut2um_wireradiusscan} and \ref{fg_CutWires_wireradius1u_cutwidth_comparison} it follows that for any practically attainable geometry, the frequency of the first individual resonance in cut-wire arrays is always relatively close to the first Bragg band gap. 
 
-A viable way to reduce the resonance frequency much lower without changing the unit cell size nor resorting to nanometric inter-wire gaps is to replace straight wire antennas by a more complex resonator \cite{TODO}
-depicted in Fig. \ref{fg_eSRR}
-\ref{fg_eSRR}
-
-
-
+A viable way to shift the resonance frequency much lower, without changing the unit cell size nor resorting to nanometric inter-wire gaps, is to replace straight wire antennas by \textit{electric split-ring resonators} \cite{TODO}, depicted in Fig. \ref{fg_eSRR}.
 
 
 
