--- a/t.tex
+++ b/t.tex
@@ -36,6 +36,8 @@
 %\definecolor{labelkey}{blue}
 %\renewcommand*{\showkeyslabelformat}[1]{\hspace{-9mm}\vbox{\hsize=1.1cm\normalfont\tiny#1}}
 
+%TODO Quotes: 
+% The purpose of computing is insight, not numbers. -- R. W. Hamming
 
 \begin{document}
 \input{title.tex}
